[package]
name = "core-network"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom-filters = "0.1"
derive_more = "0.99"
faketime = "0.2.0"
futures = "0.3"
ipnetwork = "0.19"
log = "0.4"
parking_lot = "0.12"
prost = "0.10"
rand = "0.7"
rlp = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
snap = "1.0"
socket2 = "0.4"
tentacle = { version = "0.4.0-beta.5", features = ["parking_lot"] }
tokio-util = { version = "0.7", features = ["codec"] }

common-apm = { path = "../../common/apm" }
common-apm-derive = { path = "../../common/apm-derive" }
protocol = { path = "../../protocol", package = "axon-protocol" }

[dev-dependencies]
env_logger = "0.9"

# lock zeroize_derive on 1.1 because blst need zeroize_derive < 1.2
# x25519-dalek 1.2 need zeroize 1.3
# zeroize 1.3 need zeroize_derive >= 1.3
x25519-dalek = "=1.1"
zeroize_derive = "=1.1"
