[package]
name = "core-network"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom-filters = "0.1"
derive_more = "0.99"
faketime = "0.2"
futures = "0.3"
ipnetwork = "0.20"
log = "0.4"
parking_lot = "0.12"
prost = "0.11"
rlp = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snap = "1.0"
socket2 = "0.4"
tentacle = { version = "0.5.0-alpha.1", features = ["parking_lot", "secio-async-trait"] }
tokio-util = { version = "0.7", features = ["codec"] }

common-apm = { path = "../../common/apm" }
common-apm-derive = { path = "../../common/apm-derive" }
common-config-parser = { path = "../../common/config-parser" }
protocol = { path = "../../protocol", package = "axon-protocol" }

[dev-dependencies]
env_logger = "0.10"
