[package]
name = "core-rpc-client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.104"
ckb-sdk = "1.0"
ckb-types = "0.103"
futures = "0.3"
jsonrpc-core = "18.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"

protocol = { path = "../../protocol", package = "axon-protocol" }
