[package]
name = "core-rpc-client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.106"
ckb-sdk = "2.4"
ckb-types = "0.108"
futures = "0.3"
jsonrpc-core = "18.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

protocol = { path = "../../protocol", package = "axon-protocol" }
