[package]
name = "core-run"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
cita_trie = "3.0"
clap = "3.1"
ethers-signers = "0.17"
futures = "0.3"
log = "0.4"
rlp = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"

common-apm = { path = "../../common/apm" }
common-apm-derive = { path = "../../common/apm-derive" }
common-config-parser = { path = "../../common/config-parser" }
common-crypto = { path = "../../common/crypto" }
common-logger = { path = "../../common/logger" }
common-memory-tracker = { path = "../../common/memory-tracker", optional = true }
core-api = { path = "../../core/api" }
core-consensus = { path = "../../core/consensus" }
core-cross-client = { path = "../../core/cross-client" }
core-executor = { path = "../../core/executor" }
core-ibc = { path = "../../core/ibc"}
core-interoperation = { path = "../../core/interoperation" }
core-mempool = { path = "../../core/mempool" }
core-metadata = { path = "../../core/metadata" }
core-network = { path = "../../core/network" }
core-rpc-client = { path = "../../core/rpc-client" }
core-storage = { path = "../../core/storage" }
core-tx-assembler = { path = "../../core/tx-assembler" }
protocol = { path = "../../protocol", package = "axon-protocol" }

[target.'cfg(all(not(target_env = "msvc"), not(target_os="macos")))'.dependencies]
jemalloc-ctl = { version = "0.5", package = "tikv-jemalloc-ctl", optional = true }
jemallocator = { version = "0.5", features = ["profiling", "stats", "unprefixed_malloc_on_supported_platforms"], package = "tikv-jemallocator", optional = true }

[features]
jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl", "dep:common-memory-tracker"]
