[package]
edition = "2021"
name = "core-storage"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
lru = "0.10.0"
parking_lot = "0.12"
rocksdb = { version = "0.19", package = "ckb-rocksdb" }

common-apm = { path = "../../common/apm" }
common-apm-derive = { path = "../../common/apm-derive" }
common-config-parser = { path = "../../common/config-parser" }
protocol = { path = "../../protocol", package = "axon-protocol" }

[dev-dependencies]
common-crypto = { path = "../../common/crypto" }
criterion = "0.4"
num-traits = "0.2"
rand = "0.7"

[[bench]]
harness = false
name = "bench"
