[package]
edition = "2021"
name = "core-storage"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
lru = "0.12"
parking_lot = "0.12"

common-apm = { path = "../../common/apm" }
common-apm-derive = { path = "../../common/apm-derive" }
core-db ={ path = "../../core/db" }
protocol = { path = "../../protocol", package = "axon-protocol" }

[dev-dependencies]
common-crypto = { path = "../../common/crypto" }
criterion = "0.5"
num-traits = "0.2"

[[bench]]
harness = false
name = "bench"
