[package]
name = "core-tx-assembler"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5"
ckb-jsonrpc-types = "0.105"
ckb-sdk = "2.3"
ckb-types = "0.105"
common-crypto = { path = "../../common/crypto" }
lazy_static = "1.4"
log = "0.4"
molecule = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

protocol = { path = "../../protocol", package = "axon-protocol" }

[dev-dependencies]
core-rpc-client = { path = "../rpc-client" }
rand = "0.7"
