[package]
name = "genesis-generator"
version = "0.1.0"
edition = "2021"
include = ["Cargo.toml", "src/*"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["yaml", "cargo"] }
common-config-parser = { path = "../../common/config-parser" }
common-crypto = { path = "../../common/crypto" }
core-executor = { path = "../../core/executor" }
core-metadata = { path = "../../core/metadata" }
ethers-contract = { version = "0.13", features = ["abigen"] }
ethers-core = "0.13"
ethers-providers = "0.13"
ophelia = "0.3.4"
protocol = { path = "../../protocol", package = "axon-protocol" }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
