[package]
name = "axon-keypair"
version = "0.2.1"
edition = "2021"
include = ["Cargo.toml", "src/*"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
hex = "0.4"
ophelia-bls-amcl = "0.3"
ophelia = "0.3"
protocol = { path = "../../protocol", package = "axon-protocol" }
rand = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
# tentacle-secio = { version = "0.1", features = [ "molc" ] }
